--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vite App</title>
+  <script src="//at.alicdn.com/t/font_2358315_87fe20z7tl2.js"></script>
 </head>
 <body>
   <div id="app"></div>
   <script type="module" src="/src/main.ts"></script>
 </body>
+
 <script>var exports = {"__esModule": true};</script>
 </html>
